controladores de income y expense

--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -30,4 +30,5 @@
 
 <br>
 
-<%= link_to 'New Transaction', new_transaction_path %>
+<%= link_to 'New Income', new_income_path %>
+<%= link_to 'New Expense', new_expense_path %>
