--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,6 @@
   <body>
   
     <%= yield %>
+  	<%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
   </body>
 </html>
