--- a/app/assets/stylesheets/not_signed_in.scss
+++ b/app/assets/stylesheets/not_signed_in.scss
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url(/assets/login-background.jpg); 
+    background-image: asset-url('login-background.jpg'); 
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
@@ -35,7 +35,6 @@ html, body, .container-table {
 
 .content{
     background-color: rgba(0,0,0,0.5);
-    padding: 0;
     padding: 30px 0;
     border-radius: 15px;
 }
