--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -17,11 +17,11 @@
     <% @transactions.each do |transaction| %>
       <tr>
         <td><%= transaction.amount %></td>
-        <td><%= transaction.category %></td>
+        <td><%= transaction.category.name %></td>
         <td><%= transaction.commit %></td>
         <td><%= transaction.when %></td>
         <td><%= link_to 'Show', transaction %></td>
-        <td><%= link_to 'Edit', edit_transaction_path(transaction) %></td>
+        <td><%= link_to 'Edit', transaction.type == "Income" ? edit_income_path(transaction) : edit_expense_path(transaction) %></td>
         <td><%= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
