--- a/app/views/cdefaults/edit.html.erb
+++ b/app/views/cdefaults/edit.html.erb
@@ -1,4 +1,3 @@
-<h1>Cdefault#edit</h1>
-<p>Find me in app/views/cdefault/edit.html.erb</p>
+<h1>Edit a Default Category</h1>
 
 <%= render "cdefaults/form", :path => update_cdefaults_url %>
