--- a/app/views/cdefaults/new.html.erb
+++ b/app/views/cdefaults/new.html.erb
@@ -1,4 +1,3 @@
-<h1>Cdefault#new</h1>
-<p>Find me in app/views/cdefault/new.html.erb</p>
+<h1>New Default Category</h1>
 
 <%= render "cdefaults/form", :path => create_cdefaults_url %>
