--- a/app/assets/stylesheets/application/application.css
+++ b/app/assets/stylesheets/application/application.css
@@ -11,5 +11,10 @@
  * It is generally better to create a new file per style scope.
  *
  *= require rails_bootstrap_forms
+ *= require_self
  *= require_tree
  */
+
+body{
+	padding-top: 60px;
+}
