--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
       <div class="alert alert-danger" role="alert"><%= flash[:error] %></div>
       <% end %>
     <%= yield %>
+    <h1>Test</h1>
     </div>
   </body>
 </html>
