Manejo de Account completado

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,11 @@
         <li>
         <%= link_to('Income Category', icategories_path) %>        
         </li>
-                <li>
+        <li>
         <%= link_to('Expense Category', ecategories_path) %>        
+        </li>
+        <li>
+        <%= link_to('Accounts', accounts_path) %>        
         </li>
       </ul>
       <% end %>
