--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,9 @@
         <li>
         <%= link_to('Accounts', accounts_path) %>        
         </li>
+        <li>
+        <%= link_to('Loans', loans_path) %>        
+        </li>
       </ul>
       <% end %>
     </nav>
