--- a/app/views/loans/index.html.erb
+++ b/app/views/loans/index.html.erb
@@ -7,6 +7,7 @@
 			<thead>
 				<tr>
 					<th>Amount</th>
+					<th>Commit</th>
 					<th>Action</th>
 				</tr>
 			</thead>
@@ -14,11 +15,13 @@
 				<% current_user.user_configuration.account.loans.where(:income => nil).each do |loan| %>
 				<tr>
 					<td><%= loan.expense.amount %></td>
+					<td><%= loan.commit %></td>
 					<td><%= link_to "Finish", finish_loans_path(:id => loan.id), :method => "post" %></td>
 				</tr>
 				<% end %>
 			</tbody>
 		</table>
+		<%= link_to "Lend", lend_loans_path, :class => "btn btn-primary btn-block" %>
 	</div>
 	<div class="col-xs-12 col-md-6">
 		<h1 class="text-center">Lended to me</h1>
@@ -26,6 +29,7 @@
 			<thead>
 				<tr>
 					<th>Amount</th>
+					<th>Commit</th>
 					<th>Action</th>
 				</tr>
 			</thead>
@@ -33,10 +37,12 @@
 				<% current_user.user_configuration.account.loans.where(:expense => nil).each do |loan| %>
 				<tr>
 					<td><%= loan.income.amount %></td>
+					<td><%= loan.commit %></td>
 					<td><%= link_to "Finish", finish_loans_path(:id => loan.id), :method => "post" %></td>
 				</tr>
 				<% end %>
 			</tbody>
 		</table>
+		<%= link_to "Lend Me", lend_me_loans_path, :class => "btn btn-primary btn-block" %>
 	</div>
 </div>
