Funcionalidad import completada

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,9 @@
         <li>
         <%= link_to('Loans', loans_path) %>        
         </li>
+        <li>
+        <%= link_to('Import', new_import_path) %>        
+        </li>
       </ul>
       <% end %>
     </nav>
